fixed single page Details accrodion spacing

--- a/assets/sass/partials/_product-single.scss
+++ b/assets/sass/partials/_product-single.scss
@@ -1262,4 +1262,9 @@
     .product-main-imgwrap {
         margin: -2rem -15px 0;
     }
+    .vp-single-info-wrap {
+        .vp-single-info-top {
+            min-height: auto;
+        }
+    }
 }
